--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "jest": {
-    "testMatch": ["<rootDir>/**/*.test.js"],
-    "testPathIgnorePatterns": ["<rootDir>/node_modules"]
+    "testMatch": [
+      "<rootDir>/**/*.test.js"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules"
+    ]
   },
   "scripts": {
     "test": "jest --verbose",
@@ -13,8 +17,11 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.16.3"
+  },
   "devDependencies": {
-    "jest": "^23.4.1"
+    "jest": "^23.4.1",
+    "supertest": "^3.1.0"
   }
 }
